# wavaetro

./: .gitignore  Explorations.ipynb  LICENSE  README.md  pyproject.toml
test/: test_loader.py
wavaestro/: decorators.py  loader.py  main.py
