[tool.poetry]
name = "wavaetro"
version = "0.1.0"
description = "wavelet based explorations of the MAESTRO Dataset"
authors = ["zar3bski <zarebskidavid@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0.3"
pywavelets = "^1.4.1"
mido = "^1.2.10"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
