[tool.poetry]
name = "wavaetro"
version = "0.1.0"
description = "wavelet based explorations of the MAESTRO Dataset"
authors = ["zar3bski <zarebskidavid@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "wavaestro" },
]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.0.3"
pywavelets = "^1.4.1"
mido = "^1.2.10"
scipy = "^1.11.1"
matplotlib = "^3.7.1"
torch = "^2.0.1"
torchaudio = "^2.0.2"
torchvision = "^0.15.2"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.4.0"
notebook = "^6.5.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
